--- a/locale/zh/LC_MESSAGES/meerk40t.po
+++ b/locale/zh/LC_MESSAGES/meerk40t.po
@@ -4848,7 +4848,7 @@ msgid "Time Estimate: Traveling Time"
 msgstr "时间估计：行进时间"
 
 #: meerk40t/gui/simulation.py:1067
-msgid "Time Estimate: Extra Time (ie to swing around)"
+msgid "Time Estimate: Extra Time (i.e. to swing around)"
 msgstr "时间估计：额外时间（如旋转）"
 
 #: meerk40t/gui/simulation.py:1069
@@ -11141,7 +11141,7 @@ msgid "Increase Wordlist-Reference"
 msgstr "增加词表引用"
 
 #: meerk40t/core/elements/element_treeops.py:2015
-msgid "Adjusts the reference value for a wordlist, ie {name} to {name#+1}"
+msgid "Adjusts the reference value for a wordlist, i.e. {name} to {name#+1}"
 msgstr "调整词表的引用值，例如从{name}到{name#+1}"
 
 #: meerk40t/core/elements/element_treeops.py:2036
@@ -11149,7 +11149,7 @@ msgid "Decrease Wordlist-Reference"
 msgstr "减少词表引用"
 
 #: meerk40t/core/elements/element_treeops.py:2041
-msgid "Adjusts the reference value for a wordlist, ie {name#+3} to {name#+2}"
+msgid "Adjusts the reference value for a wordlist, i.e. {name#+3} to {name#+2}"
 msgstr "调整词表的引用值，例如从{name#+3}到{name#+2}"
 
 #: meerk40t/core/elements/element_treeops.py:2061
