--- a/locale/pt_BR/LC_MESSAGES/meerk40t.po
+++ b/locale/pt_BR/LC_MESSAGES/meerk40t.po
@@ -4291,7 +4291,7 @@ msgid ""
 "Participation in the project is highly encouraged.\n"
 "Past participation, and continuing participation is graciously thanked.\n"
 "This program is mostly the brainchild of Tatarize,\n"
-"who sincerely hopes his contributions will be but\n"
+"who sincerely hoped his contributions would be but\n"
 "the barest trickle that becomes a raging river."
 msgstr ""
 "MeerK40t é um projeto de código aberto gratuito licenciado pelo MIT\n"
