--- a/locale/pt_BR/LC_MESSAGES/meerk40t.po
+++ b/locale/pt_BR/LC_MESSAGES/meerk40t.po
@@ -1064,8 +1064,8 @@ msgstr "Distância de cor"
 
 #: meerk40t/core/elements.py:187
 msgid ""
-"The color distance of an element to an operations that will still allow "
-"classifiation"
+"The color distance of an element to an operation that will still allow "
+"classification"
 msgstr ""
 "A distância de cor de um elemento para uma operação que ainda permitirá "
 "classificação"
