--- a/locale/zh/LC_MESSAGES/meerk40t.po
+++ b/locale/zh/LC_MESSAGES/meerk40t.po
@@ -10272,8 +10272,8 @@ msgstr "颜色距离"
 
 #: meerk40t/core/elements/elements.py:208
 msgid ""
-"The color distance of an element to an operations that will still allow "
-"classifiation"
+"The color distance of an element to an operation that will still allow "
+"classification"
 msgstr "元素到操作的颜色距离，仍然允许分类"
 
 #: meerk40t/core/elements/elements.py:212
